[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["motyazakharova <motyazakharova@LAPTOP-I5RMG5PC.localdomain>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
